--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <div class="one">
       <h1 class="one">
         Hi
-        <span id="name"></span>
+        <span id="name">Camelia</span>
       </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
+      <p class="two" id="greetingText">I forgot yesterday was your birthday</p>
     </div>
 
     <div class="three">
@@ -36,7 +36,7 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+          I hope you can achieve your goals in live and my hope is that you graduate wit good grades. spirit ...
         </p>
         <p class="fake-btn">Send</p>
       </div>
@@ -62,11 +62,11 @@
     </div>
 
     <div class="six">
-      <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+      <img src="./img/camelia.jpg" alt="profile" class="profile-picture" id="imagePath"/>
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 id="wishText">wish you a beautiful day Camelia ;)</h5>
       </div>
     </div>
 
